syntax = "proto3";
package metapb;

import "gogoproto/gogo.proto";
import "meta.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;


service MsRpc {
    rpc GetRoute(GetRouteRequest) returns (GetRouteResponse) {}
}

message RequestHeader {
}

message ResponseHeader {
    int32       code                = 1;
    string      msg                 = 2;
}

message GetRouteRequest {
    RequestHeader       header          = 1;
    uint32              space           = 2;
    uint32              slot            = 3;
}

message GetRouteResponse {
    ResponseHeader          header          = 1;
    repeated Route          routes          = 2;
}
